<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@drawable/list_item_background"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_image_content_description"
            android:scaleType="fitXY"
            />

        <LinearLayout
            android:id="@+id/product_details_layout"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp">


            <TextView
                android:id="@+id/overview_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/product_name"
                android:textColor="@android:color/white"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/overview_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/product_price"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/white"
                    android:text="@string/quantity_left"
                    android:textStyle="italic"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/overview_product_remaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/quantity_left_amount"
                    android:textColor="@android:color/white"
                    android:singleLine="true"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Sell"
            android:id="@+id/button"
            android:textColor="@android:color/white"
            android:focusable="false"
            android:background="@drawable/sale_button_background"
            />
    </LinearLayout>